--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@react-three/drei": "^9.110.0",
+    "@react-three/fiber": "^8.17.5",
     "autoprefixer": "^10.4.20",
     "gatsby": "^5.13.5",
     "gatsby-plugin-google-gtag": "^5.13.1",
@@ -27,6 +29,7 @@
     "postcss": "^8.4.41",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "three": "^0.167.1"
   }
 }
