--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.110.0",
     "@react-three/fiber": "^8.17.5",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.3.28",
     "gatsby": "^5.13.5",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
@@ -26,6 +27,8 @@
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "gsap": "^3.12.5",
+    "pixi.js": "^8.3.3",
     "postcss": "^8.4.41",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
